* Improved the predicate system.